changed button styling

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,6 +69,7 @@ input{
   color: var(--lighterColor);
   border: 1px solid rgba(255, 255, 255, 0.2);
   outline: none;  
+  cursor: pointer;
 }
 
 /* Chat page */
